# DrmNetCtrl

./: .gitignore  BuildFlash.sh  CMakeLists.txt  IpcController  README.md  appconfig.json  bf.sh  hellocmake
lib/: drm_warpper.c  drm_warpper.h
py/: host.py
src/: appconfig.json  main.c
